[gd_scene load_steps=12 format=3 uid="uid://dqpklssxni160"]

[ext_resource type="Script" path="res://Scripts/clickBlock.gd" id="1_es4xp"]
[ext_resource type="Texture2D" uid="uid://c1o6guigf68iu" path="res://Asset/城镇建筑/灵堂亮.jpg" id="2_cxpov"]
[ext_resource type="Texture2D" uid="uid://bye5cypeps08s" path="res://Asset/ui/4.png" id="3_gdvxu"]
[ext_resource type="Texture2D" uid="uid://v18r3lgfvy17" path="res://Asset/ui/白框.png" id="3_lv21x"]
[ext_resource type="Texture2D" uid="uid://c8s24bx5r2xci" path="res://Asset/other/感叹号.png" id="4_es4ro"]
[ext_resource type="Texture2D" uid="uid://c4tifw3jqmu6n" path="res://Scene/heart.png" id="5_3uyx0"]
[ext_resource type="FontFile" uid="uid://b8le0fd0ujbqx" path="res://Asset/Font/1_blod.ttf" id="5_stxph"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_eqsn2"]

[sub_resource type="Animation" id="Animation_w6s1d"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_tjyto"]
resource_name = "heart"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vxejg"]
_data = {
"RESET": SubResource("Animation_w6s1d"),
"heart": SubResource("Animation_tjyto")
}

[node name="Node2D2" type="Node2D"]
script = ExtResource("1_es4xp")
txt2d = ExtResource("2_cxpov")
boardType = null
isHide = null
metadata/_edit_vertical_guides_ = [-329.0]

[node name="9" type="Sprite2D" parent="."]
visible = false
position = Vector2(-2.83122e-06, -1)
scale = Vector2(0.96, 0.96)
texture = ExtResource("3_lv21x")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -61.0
offset_top = -61.0
offset_right = 61.0
offset_bottom = 60.0
mouse_filter = 2
color = Color(0.360784, 0.360784, 0.360784, 0.494118)

[node name="8" type="Sprite2D" parent="."]
visible = false
position = Vector2(-0.905, -0.805)
scale = Vector2(0.285, 0.285)
texture = ExtResource("3_gdvxu")

[node name="img" type="TextureRect" parent="."]
offset_left = -61.105
offset_top = -62.18
offset_right = 54.515
offset_bottom = 59.215
mouse_filter = 2
texture = ExtResource("2_cxpov")
expand_mode = 2

[node name="Area2D" type="Area2D" parent="."]
priority = 10000

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
scale = Vector2(5.72, 5.72)
shape = SubResource("RectangleShape2D_eqsn2")

[node name="Panel" type="Panel" parent="."]
visible = false
offset_left = -63.0
offset_top = 42.0
offset_right = 63.0
offset_bottom = 61.0
mouse_filter = 2

[node name="Label" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -63.0
offset_top = -18.0
offset_right = 62.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/line_spacing = 2
theme_override_fonts/font = ExtResource("5_stxph")
horizontal_alignment = 1
autowrap_mode = 3

[node name="exPoint" type="TextureRect" parent="."]
visible = false
offset_left = 30.0
offset_top = -60.0
offset_right = 158.0
offset_bottom = 68.0
scale = Vector2(0.285, 0.285)
mouse_filter = 2
texture = ExtResource("4_es4ro")

[node name="Heart" type="Sprite2D" parent="."]
visible = false
modulate = Color(1, 1, 1, 0)
position = Vector2(-37, 81)
texture = ExtResource("5_3uyx0")

[node name="Label" type="Label" parent="Heart"]
offset_left = 17.0
offset_top = -8.0
offset_right = 129.0
offset_bottom = 8.0
text = "好感度:70"

[node name="heartAni" type="AnimationPlayer" parent="."]
root_node = NodePath("../Heart/Label")
libraries = {
"": SubResource("AnimationLibrary_vxejg")
}

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered_board"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited_board"]
